@@ -23,11 +23,13 @@ gradle.projectsEvaluated {
         options.compilerArgs += [
                 '-Xlint:unchecked',
                 '-Xlint:deprecation',
-                '-parameters',
                 '--enable-preview',
                 '--add-exports=java.desktop/sun.font=ALL-UNNAMED',
                 '--add-exports=java.base/sun.reflect.generics.tree=ALL-UNNAMED',
                 '--add-exports=java.base/sun.net.www.protocol.ftp=ALL-UNNAMED',
+                '--add-exports=java.desktop/sun.awt=ALL-UNNAMED',
+                '--add-exports=java.desktop/sun.font=ALL-UNNAMED',
+                '--add-exports=java.base/sun.security.action=ALL-UNNAMED',
                 '--add-opens=java.base/java.lang=ALL-UNNAMED',
                 '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
                 '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
@@ -39,8 +41,39 @@ gradle.projectsEvaluated {
                 '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
                 '--add-opens=java.desktop/sun.font=ALL-UNNAMED',
                 '--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED',
-                '--add-exports=java.desktop/sun.awt=ALL-UNNAMED',
-                '--add-exports=java.desktop/sun.font=ALL-UNNAMED'
+                '--add-opens=java.base/sun.security.action=ALL-UNNAMED',
+                '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                '--add-opens=java.base/java.math=ALL-UNNAMED',
+                '--add-opens=java.base/java.util=ALL-UNNAMED',
+                '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
+                '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
+                '--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED',
+                '--add-opens=java.base/java.security=ALL-UNNAMED',
+                '--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED',
+                '--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
+                '--add-opens=java.base/java.net=ALL-UNNAMED',
+                '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+                '--add-opens=java.management/java.lang.management=ALL-UNNAMED',
+                '--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED',
+                '--add-opens=java.management/sun.management=ALL-UNNAMED',
+                '--add-opens=java.base/sun.security.action=ALL-UNNAMED',
+                '--add-opens=java.management/java.lang.management=ALL-UNNAMED',
+                '--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED',
+                '--add-opens=java.management/sun.management=ALL-UNNAMED',
+                '--add-opens=java.base/java.time=ALL-UNNAMED',
+                '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
+                '--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED',
+                '--add-opens=java.base/java.security=ALL-UNNAMED',
+                '--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED',
+                '--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
+                '--add-opens=java.base/java.net=ALL-UNNAMED',
+                '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+                '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                '--add-opens=java.base/java.math=ALL-UNNAMED',
+                '--add-opens=java.base/java.util=ALL-UNNAMED',
+                '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
+                '--add-opens=java.base/sun.net.util=ALL-UNNAMED',
+                '--add-opens=java.base/sun.net.util=ALL-UNNAMED'
         ]
     }
 }
